--- a/templates/base.html
+++ b/templates/base.html
@@ -15,15 +15,20 @@
         
         <!-- Right Section: Links -->
         <div>
-            <a href="/" style="color: white; text-decoration: none; margin: 0 10px;">Home</a>
-            <a href="/aboutus" style="color: white; text-decoration: none; margin: 0 10px;">About Us</a>
-            <a href="/contactus" style="color: white; text-decoration: none; margin: 0 10px;">Contact Us</a>
+    
             {% if session.get('user_id') %}
+           <!-- <a href="/home" style="color: white; text-decoration: none; margin: 0 10px;">Home</a>-->
+            <a href="/weather" style="color: white; text-decoration: none; margin: 0 10px;">weather</a>
+            <a href="/predict" style="color: white; text-decoration: none; margin: 0 10px;">crop recommendation</a>
                         <a href="/detect" style="color: white; text-decoration: none; margin: 0 10px;">detect</a>
+                        <a href="/rotation" style="color: white; text-decoration: none; margin: 0 10px;">crop rotation</a>
+                        <a href="/community" style="color: white; text-decoration: none; margin: 0 10px;">community</a>
                 <a href="/logout" style="color: white; text-decoration: none; margin: 0 10px;">Logout</a>
             {% else %}
                 <a href="/login" style="color: white; text-decoration: none; margin: 0 10px;">Login</a>
                 <a href="/register" style="color: white; text-decoration: none; margin: 0 10px;">Register</a>
+                <a href="/aboutus" style="color: white; text-decoration: none; margin: 0 10px;">About Us</a>
+            <a href="/contactus" style="color: white; text-decoration: none; margin: 0 10px;">Contact Us</a>
             {% endif %}
         </div>
     </nav>
