--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,28 @@
 {% block title %}Login{% endblock %}
 {% block content %}
 <h1>Login</h1>
+
+<style>
+  
+    
+    body {
+        background-image: url('/static/image.png');
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: center;
+        
+    }
+    
+
+    
+    
+</style>
 <form method="POST">
     <input type="email" name="email" class="na" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit">Login</button>
+    <p>Don't have an account? <a href="/register">Register here</a></p>
 </form>
-<p>Don't have an account? <a href="/register">Register here</a></p>
+
 {% endblock %}
