--- a/templates/rotation.html
+++ b/templates/rotation.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% block title %}Crop Rotation Prediction{% endblock %}
 {% block content %}
 <h2>Crop Rotation Prediction</h2>
