--- a/templates/rotation_result.html
+++ b/templates/rotation_result.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% block title %}Rotation Prediction Result{% endblock %}
 {% block content %}
     <h2>Next Preferred Crop</h2>
